# course_advanced_dbt

./: packages.yml  pyproject.toml
models/docs/: docs_bingeflix.md
models/marts/core/: fct_events.yml
models/marts/finance/: fct_mrr.sql
models/staging/bingeflix/: source_bingeflix.yml
